# Catay

./: README.md  meson.build  uk.cetera.Catay.json
data/: meson.build  uk.cetera.Catay.appdata.xml.in  uk.cetera.Catay.desktop.in  uk.cetera.Catay.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: FFlagEditor.blp  FFlagEditor.ui  FFlagEditor.vala  application.vala  catay.gresource.xml  main.vala  meson.build  window.blp  window.ui  window.vala
